force-app/main/default/objects/Person__c/fields/Total_Amount_of_Projects__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Projects__c</fullName>
    <description>Total amount of Projects assigned to Person</description>
    <label>Total Amount of Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>