force-app/main/default/objects/Person__c/validationRules/Total_Amount_of_Proj_can_not_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Amount_of_Proj_can_not_exceed_100</fullName>
    <active>true</active>
    <description>Total amount of Projects for 1 Person can not exceed 100</description>
    <errorConditionFormula>Total_Amount_of_Projects__c &gt; 100</errorConditionFormula>
    <errorMessage>Total amount of Projects for 1 Person can not exceed 100</errorMessage>
</ValidationRule>