force-app/main/default/objects/Person__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Total_Amount_of_Tasks__c</columns>
    <columns>Total_Amount_of_Projects__c</columns>
    <columns>Is_Synced__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>